# timeit2

./: .gitignore  CHANGELOG.md  LICENCE  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
examples/: append.py  example.py  minimum.py
src/timeit2/: __init__.py
tests/: test_timeit2.py
