[tool.poetry]
name = "timeit2"
version = "0.1.1"
description = "xtended version of timeit package"
authors = ["atu4403 <73111778+atu4403@users.noreply.github.com>"]
homepage = "https://github.com/atu4403"
repository = "https://github.com/atu4403/timeit2"
readme = "README.md" 

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2.0"
pytest-mock = "^3.5.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
